--- a/css/paper.css
+++ b/css/paper.css
@@ -168,3 +168,23 @@ margin-bottom: 1em;
     margin-top: 1em;
   }
   
+
+
+
+.paper_scroll_video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
